@@ -1,0 +1,48 @@
+version: 2
+jobs:
+  test_ruby_2_5_4:
+    parallelism: 2
+    docker:
+    - image: circleci/ruby:2.5.4
+      environment:
+        RAILS_ENV: test
+        RACK_ENV: test
+        POSTGRES_USER: root
+        PGHOST: 127.0.0.1
+        DATABASE_URL: postgres://postgres@127.0.0.1/circle_test
+        QC_DATABASE_URL: postgres://postgres@127.0.0.1/circle_test
+        QC_BENCHMARK: true
+        QC_BENCHMARK_MAX_TIME_DEQUEUE: 60
+    - image: circleci/postgres:9.6.6-alpine
+    steps:
+    - checkout
+    - run:
+        name: Install env dependencies
+        command: |
+          sudo apt-get update
+          sudo apt-get install postgresql-client
+    - restore_cache:
+        key: v1-qc-bundler-{{ checksum "Gemfile" }}-{{ checksum "queue_classic.gemspec"
+          }}
+    - run:
+        name: Install Ruby gems
+        command: |
+          bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+    - save_cache:
+        key: v1-qc-bundler-{{ checksum "Gemfile" }}-{{ checksum "queue_classic.gemspec"
+          }}
+        paths:
+        - ~/project/vendor/bundle
+    - run:
+        name: Minitest
+        command: |
+          bundle exec rake
+    - store_artifacts:
+        path: test/reports/
+    - store_test_results:
+        path: test/reports/
+workflows:
+  version: 2
+  test:
+    jobs:
+    - test_ruby_2_5_4
